Use older framework package to prevent boot loop

--- a/photobooth - main/platformio.ini
+++ b/photobooth - main/platformio.ini
@@ -13,8 +13,11 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+platform_packages = 
+; Had to pin the framework version to 3.20003.220626 to get the Adafruit NeoPixel library to work. With the current version the ESP32 is in a boot loop.
+	platformio/framework-arduinoespressif32 @ 3.20003.220626
 lib_deps = 
-	adafruit/Adafruit NeoPixel@~1.10.4
+	adafruit/Adafruit NeoPixel@1.10.4
 	olikraus/U8g2@~2.32.12
 	thomasfredericks/Bounce2@~2.70
 ; monitor_port = COM4
