--- a/photobooth - buzzer/platformio.ini
+++ b/photobooth - buzzer/platformio.ini
@@ -32,5 +32,9 @@ monitor_speed = 115200
 ; monitor_port = COM5
 ; upload_port = COM5
 
+platform_packages = 
+; Had to pin the framework version to 3.20003.220626. With the current version the Firebeetle32 is in a boot loop.
+	platformio/framework-arduinoespressif32 @ 3.20003.220626
+
 lib_deps = 
 	;olikraus/U8g2@^2.28.8
